--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,13 @@
- 
+body {
+  min-height: 100vh;
+}
+
+.monthly-card:hover {
+  text-decoration: none !important;
+  transition: all 300ms;
+}
+
+.monthly-card:hover {
+  font-size: 1.2em;
+  transition: all 300ms;
+}
