In thi version we can find a more reactive app that changes everywhere when needed, also sorts out the incomes from out comes and handles betters the dates

--- a/src/index.css
+++ b/src/index.css
@@ -2,12 +2,6 @@ body {
   min-height: 100vh;
 }
 
-.monthly-card:hover {
+.monthly-card {
   text-decoration: none !important;
-  transition: all 300ms;
-}
-
-.monthly-card:hover {
-  font-size: 1.2em;
-  transition: all 300ms;
 }
