A better organization can be found in this version when looking a debts one by one

--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,11 @@ body {
 .monthly-card {
   text-decoration: none !important;
 }
+
+.textElipsis {
+  text-overflow: ellipsis;
+}
+
+.capital {
+  text-transform: capitalize;
+}
